--- a/data_description_analisis (scrapper).ipynb
+++ b/data_description_analisis (scrapper).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Archivo utilizado para procesar la base de datos con la que trabajaremos"
+    "Archivo donde graficaremos nuestros datos"
    ]
   },
   {
@@ -20,6 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -28,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importamos Datos Privados"
+    "Importamos Datos"
    ]
   },
   {
@@ -37,24 +39,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Levanto la base de datos privados con la que trabajeremos\n",
-    "df_k = pd.read_csv('base_kavak.csv', sep=\";\")\n",
+    "# Levantamos los datos procesados\n",
+    "datos = pd.read_excel('data_ready_to_model.xlsx')\n",
+    "#datos.precio = datos.precio.astype(float)\n",
     "\n",
     "# Observamos nuestro dataset\n",
-    "df_k.info()\n",
-    "df_k.shape\n",
-    "# (2532, 15)\n",
-    "\n",
-    "# Armo una lista de los modelos disponibles en el dataset\n",
-    "modelos = df_k['modelo'].unique().tolist()\n",
-    "# 146 modelos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importamos Datos Públicos"
+    "datos.shape\n",
+    "datos.info\n",
+    "# (31869, 10)"
    ]
   },
   {
@@ -63,106 +55,219 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Levanto la base de datos públicos con la que trabajeremos\n",
-    "df = pd.read_csv('data_publications.csv', sep=\";\")\n",
-    "\n",
-    "# Observamos nuestro dataset\n",
-    "df.info()\n",
-    "df.shape\n",
-    "# (51360, 9)\n",
-    "\n",
-    "# Evaluamos si tiene duplicados\n",
-    "print(df.duplicated().sum())\n",
-    "# 7624 filas duplicadas\n",
-    "\n",
-    "# Sacamos los valores duplicados\n",
-    "df_new = df.drop_duplicates()\n",
-    "df_new.shape\n",
-    "# (43736, 9)\n",
-    "\n",
-    "# Evaluamos si tiene nulos\n",
-    "df_new.isna().sum().sort_values()\n",
-    "# provincia      9\n",
-    "\n",
-    "# Sacamos aquellas publicadas con valor en Dolares\n",
-    "df_new_ars = df_new.drop(df_new[df_new['currency']=='U$S'].index)\n",
-    "\n",
-    "df_new_ars.shape\n",
-    "df_new_ars.info()\n",
-    "df_new_ars.describe()\n",
-    "# (35705, 9)\n",
-    "\n",
-    " \n",
-    "# Sumamos la columna modelo al data set público (a partir de los datos privados)\n",
-    "df_new_ars['modelo'] = pd.NaT\n",
-    "i = 0\n",
-    "for t in df_new_ars['title']:\n",
-    "    for m in modelos:\n",
-    "        if m.lower() in t.lower():\n",
-    "            df_new_ars['modelo'][i] = m\n",
-    "    i = i + 1\n",
-    "\n",
-    "\n",
-    "  \n",
-    "# Vemos la forma\n",
-    "df_new_ars.shape\n",
-    "# (35705, 10)\n",
-    "\n",
-    "\n",
-    "# Evaluo valores con nulos\n",
-    "df_new_ars.isna().sum().sort_values()\n",
-    "# provincia         8\n",
-    "# modelo         14711\n",
-    " \n",
-    "# Eliminamos los valores con modelo nulo\n",
-    "df_new_ars = df_new_ars.drop(df_new_ars[df_new_ars['modelo'].isna()].index)\n",
-    "df_new_ars = df_new_ars.drop('title',axis=1)\n",
-    "\n",
-    "df_new_ars.shape\n",
-    "# (20994, 9)\n",
-    "\n",
-    "\n",
-    "# Guardamos la información en un csv\n",
-    "# df_new_ars.to_csv('data_publications_process.csv',mode='a', sep=';', encoding='utf-8-sig', index=False)\n",
-    "# datos.to_excel('data_ready_to_model.csv',mode='a', sep=';', encoding='utf-8-sig', index=False)\n",
+    "# Variable precio ---------------------\n",
+    "plt.title('Precio')\n",
+    "plt.xlabel(\"precio ('000)\")\n",
+    "plt.hist(datos['precio']/1000, bins = 70)\n",
+    "plt.show() \n",
     "#%%\n",
-    "# Exporto a un Excel\n",
-    "datos = df_new_ars\n",
-    "datos.to_excel('data_ready_to_model.xlsx', index=False)\n",
+    "# Cómo ver outliers\n",
+    "sns.boxplot(x=datos['precio'])\n",
+    "plt.show() \n",
+    "\n",
+    "#%%\n",
+    "# PRecio con Seaborn\n",
+    "sns.displot(datos, x='precio')\n",
+    "plt.show() \n",
+    "\n",
+    "#%%\n",
     "\n",
     "\n",
+    "#%%\n",
+    "# Variable precio con logartimo ---------------------\n",
+    "plt.title('Precio')\n",
+    "plt.xlabel(\"precio ('000)\")\n",
+    "plt.hist(np.log(datos['precio']), bins = 70)\n",
+    "plt.show() \n",
+    "\n",
+    "#%%\n",
+    "\n",
+    "# Cómo ver outliers\n",
+    "sns.boxplot(x=np.log(datos['precio']))\n",
+    "plt.show() \n",
     "\n",
     "\n",
+    "# Otra manera de ver outliers para Precio & Año\n",
+    "fig, ax = plt.subplots(figsize=(16,8))\n",
+    "ax.scatter(datos['year'], datos['precio'])\n",
+    "ax.set_xlabel('Año')\n",
+    "ax.set_ylabel('Precio')\n",
+    "plt.show()\n",
     "\n",
-    "################################################## Limpieza de datos##\n",
-    "######################################################################\n",
+    "#%%\n",
+    "# Otra manera de ver outliers para Precio & Año\n",
+    "fig, ax = plt.subplots(figsize=(16,8))\n",
+    "ax.scatter(datos['year'], np.log(datos['precio']))\n",
+    "ax.set_xlabel('Año')\n",
+    "ax.set_ylabel('Precio')\n",
+    "plt.show()\n",
+    "#%%\n",
+    "# Otra manera de ver outliers para Precio & KM\n",
+    "fig, ax = plt.subplots(figsize=(16,8))\n",
+    "ax.scatter(datos['km'], datos['precio'])\n",
+    "ax.set_xlabel('KM')\n",
+    "ax.set_ylabel('Precio')\n",
+    "plt.show()\n",
     "\n",
-    "# 1 - Sacamos los outliers\n",
+    "fig, ax = plt.subplots(figsize=(16,8))\n",
+    "ax.scatter(datos['km'], np.log(datos['precio']))\n",
+    "ax.set_xlabel('KM')\n",
+    "ax.set_ylabel('Precio')\n",
+    "plt.show()\n",
     "\n",
-    "# Función que termina los outliers\n",
-    "def outlier_treatment(df,datacolumn):\n",
-    "    sorted(datacolumn)\n",
-    "    Q1,Q3 = np.percentile(datacolumn , [25,75])\n",
-    "    IQR = Q3 - Q1\n",
-    "    lower_range = Q1 - (1.5 * IQR)\n",
-    "    upper_range = Q3 + (1.5 * IQR)\n",
-    "    df.drop(df[(datacolumn < lower_range) | (datacolumn > upper_range)].index, inplace=True)\n",
-    "    return df\n",
+    "#%%\n",
+    "# Variable KMT --------------------------- \n",
+    "plt.title('Kilometros')\n",
+    "plt.xlabel(\"KM\")\n",
+    "plt.hist(datos['km'], bins = 70)\n",
+    "plt.show()\n",
+    "#%%\n",
+    "# Grafico los outliers\n",
+    "sns.boxplot(x=datos['km'])\n",
+    "plt.show()\n",
     "\n",
-    "# Saco outlier KM\n",
-    "# datos = outlier_treatment(datos, datos.km)\n",
-    "# datos.shape\n",
-    "# (30808, 10)\n",
+    "# Variable Year --------------------------- \n",
+    "plt.title('Años')\n",
+    "plt.xlabel('year')\n",
+    "plt.hist(datos['year'], bins = 70)\n",
+    "plt.show()\n",
     "\n",
-    "# Saco outlier Year\n",
-    "# datos = outlier_treatment(datos, datos.year)\n",
-    "# datos.shape\n",
-    "# (30404, 10)\n",
+    "# Grafico los outliers\n",
+    "sns.boxplot(x=datos['year'])\n",
+    "plt.show()\n",
     "\n",
-    "# Saco outlier Price\n",
-    "# datos = outlier_treatment(datos, datos.precio)\n",
-    "# datos.shape\n",
-    "# (28600, 10)"
+    "# Relación entre km & precio --------------------------- \n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(8, 8)\n",
+    "sns.regplot(x=\"km\", y=\"precio\", data=datos,\n",
+    "            scatter_kws={'color':'green', 'alpha':0.3},\n",
+    "            line_kws={'color':'red'})\n",
+    "ax.set_title('Precio vs Kilometraje',\n",
+    "             fontsize=16, weight=\"bold\")\n",
+    "plt.show()\n",
+    "#%%\n",
+    "# Relación entre year & precio --------------------------- \n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(8, 8)\n",
+    "sns.regplot(x=\"year\", y=\"precio\", data=datos,\n",
+    "            scatter_kws={'color':'green', 'alpha':0.3},\n",
+    "            line_kws={'color':'red'})\n",
+    "ax.set_title('Precio vs Año',\n",
+    "             fontsize=16, weight=\"bold\")\n",
+    "plt.show()\n",
+    "#%%\n",
+    "\n",
+    "#%%\n",
+    "# Relación entre marca & precio --------------------------- \n",
+    "\n",
+    "marca_cnt = datos['marca'].value_counts(sort=False).sort_values(ascending=True)\n",
+    "\n",
+    "marca_cnt_bar = marca_cnt.plot(kind='barh', y=\"marca\", \n",
+    "                           legend=False, figsize=(8, 8))\n",
+    "marca_cnt_bar.set_title(\"# Publicaciones por Marca\",\n",
+    "                      fontsize=16, weight=\"bold\")\n",
+    "marca_cnt_bar.set_xlabel(\"# publicaciones\")\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# Busco los promedios\n",
+    "precio_marca = datos.pivot_table(index=\"marca\",\n",
+    "                          values=[\"precio\"],\n",
+    "                          aggfunc='mean')\n",
+    "precio_marca.head()\n",
+    "\n",
+    "# Los grafico\n",
+    "\n",
+    "precio_marca.sort_values(\"precio\", ascending=True, inplace=True)\n",
+    "precio_marca_bar = precio_marca.plot(kind=\"barh\", y=\"precio\", figsize=(8, 8), legend=False)\n",
+    "\n",
+    "precio_marca_bar.set_xlabel(\"Precio promedio\")\n",
+    "precio_marca_bar.set_title(\"Precio promedio por marca\",\n",
+    "                  fontsize=16, weight=\"bold\")\n",
+    "plt.show()\n",
+    "#%%\n",
+    "\n",
+    "#%%\n",
+    "# Relación entre provincia & precio --------------------------- \n",
+    "\n",
+    "provincia_cnt = datos['provincia'].value_counts(sort=False).sort_values(ascending=True)\n",
+    "provincia_cnt_bar = provincia_cnt.plot(kind='barh', y=\"provincia\", \n",
+    "                           legend=False, figsize=(8, 8))\n",
+    "provincia_cnt_bar.set_title(\"# Publicaciones por Provincia\",\n",
+    "                      fontsize=16, weight=\"bold\")\n",
+    "provincia_cnt_bar.set_xlabel(\"# publicaciones\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Busco los promedios\n",
+    "precio_provincia = datos.pivot_table(index=\"provincia\",\n",
+    "                          values=[\"precio\"],\n",
+    "                          aggfunc='mean')\n",
+    "precio_provincia.head()\n",
+    "\n",
+    "# Los grafico\n",
+    "\n",
+    "precio_provincia.sort_values(\"precio\", ascending=True, inplace=True)\n",
+    "precio_provincia_bar = precio_provincia.plot(kind=\"barh\", y=\"precio\", figsize=(8, 8), legend=False)\n",
+    "\n",
+    "precio_provincia_bar.set_xlabel(\"Precio promedio\")\n",
+    "precio_provincia_bar.set_title(\"Precio promedio por provincia\",\n",
+    "                  fontsize=16, weight=\"bold\")\n",
+    "plt.show()\n",
+    "#%%\n",
+    "# Relación entre localidad & precio --------------------------- \n",
+    "\n",
+    "loc_cnt = datos['localidad'].value_counts(sort=False).sort_values(ascending=True)\n",
+    "loc_cnt_bar = loc_cnt.plot(kind='barh', y=\"localidad\", \n",
+    "                           legend=False, figsize=(8, 8))\n",
+    "loc_cnt_bar.set_title(\"# Publicaciones por Localidad\",\n",
+    "                      fontsize=16, weight=\"bold\")\n",
+    "loc_cnt_bar.set_xlabel(\"# publicaciones\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Busco los promedios\n",
+    "precio_loc = datos.pivot_table(index=\"localidad\",\n",
+    "                          values=[\"precio\"],\n",
+    "                          aggfunc='mean')\n",
+    "precio_loc.head()\n",
+    "\n",
+    "# Los grafico\n",
+    "\n",
+    "precio_loc.sort_values(\"precio\", ascending=True, inplace=True)\n",
+    "precio_loc_bar = precio_loc.plot(kind=\"barh\", y=\"precio\", figsize=(8, 8), legend=False)\n",
+    "\n",
+    "precio_loc_bar.set_xlabel(\"Precio promedio\")\n",
+    "precio_loc_bar.set_title(\"Precio promedio por localidad\",\n",
+    "                  fontsize=16, weight=\"bold\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Relación entre modelo & precio --------------------------- \n",
+    "\n",
+    "mod_cnt = datos['modelo'].value_counts(sort=False).sort_values(ascending=True)\n",
+    "mod_cnt_bar = mod_cnt.plot(kind='barh', y=\"modelo\", \n",
+    "                           legend=False, figsize=(8, 8))\n",
+    "mod_cnt_bar.set_title(\"# Publicaciones por Modelo\",\n",
+    "                      fontsize=16, weight=\"bold\")\n",
+    "mod_cnt_bar.set_xlabel(\"# publicaciones\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Busco los promedios\n",
+    "precio_mod = datos.pivot_table(index=\"modelo\",\n",
+    "                          values=[\"precio\"],\n",
+    "                          aggfunc='mean')\n",
+    "precio_mod.head()\n",
+    "\n",
+    "# Los grafico\n",
+    "\n",
+    "precio_mod.sort_values(\"precio\", ascending=True, inplace=True)\n",
+    "precio_mod_bar = precio_mod.plot(kind=\"barh\", y=\"precio\", figsize=(8, 8), legend=False)\n",
+    "\n",
+    "precio_mod_bar.set_xlabel(\"Precio promedio\")\n",
+    "precio_mod_bar.set_title(\"Precio promedio por localidad\",\n",
+    "                  fontsize=16, weight=\"bold\")\n",
+    "plt.show()\n",
+    "# %%"
    ]
   }
  ],
