--- a/modelo_XGBoost (api-completo).ipynb
+++ b/modelo_XGBoost (api-completo).ipynb
@@ -802,45 +802,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_17824/272885467.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\LUCIA~1.LOP\\AppData\\Local\\Temp/ipykernel_17824/272885467.py\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    'min_child_weight': [1, 2, 3]}\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RandomizedSearchCV(estimator=XGBRegressor(base_score=None, booster=None,\n",
-       "                                          colsample_bylevel=None,\n",
-       "                                          colsample_bynode=None,\n",
-       "                                          colsample_bytree=None,\n",
-       "                                          enable_categorical=False, gamma=None,\n",
-       "                                          gpu_id=None, importance_type=None,\n",
-       "                                          interaction_constraints=None,\n",
-       "                                          learning_rate=None,\n",
-       "                                          max_delta_step=None, max_depth=None,\n",
-       "                                          min_child_weight=None, missing=nan,\n",
-       "                                          monotone_constraints=None,...\n",
-       "                                          validate_parameters=None,\n",
-       "                                          verbosity=None),\n",
-       "                   n_iter=3,\n",
-       "                   param_distributions={'colsample_bylevel': array([0.4, 0.5, 0.6, 0.7, 0.8, 0.9]),\n",
-       "                                        'colsample_bytree': array([0.4, 0.5, 0.6, 0.7, 0.8, 0.9]),\n",
-       "                                        'learning_rate': [0.01, 0.1, 0.2, 0.3],\n",
-       "                                        'max_depth': [3, 5, 6, 10, 15, 20],\n",
-       "                                        'n_estimators': [100, 500, 1000],\n",
-       "                                        'subsample': array([0.5, 0.6, 0.7, 0.8, 0.9])},\n",
-       "                   scoring='neg_mean_squared_error', verbose=1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -851,7 +822,9 @@
     "           'subsample': np.arange(0.5, 1.0, 0.1),\n",
     "           'colsample_bytree': np.arange(0.4, 1.0, 0.1),\n",
     "           'colsample_bylevel': np.arange(0.4, 1.0, 0.1),\n",
-    "           'n_estimators': [100, 500, 1000]}\n",
+    "           'n_estimators': [100, 500, 1000],\n",
+    "           'eta': [0.3, 0.01, 0.2]\n",
+    "           'min_child_weight': [1, 2, 3]}\n",
     "\n",
     "xgbr = xgb.XGBRegressor(seed = 20)\n",
     "clf_RandomS = RandomizedSearchCV(estimator=xgbr,\n",
@@ -1459,7 +1432,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e3e9a750fc05e5a08aac5c7f68a373d320e024e5143e44a9c92a2cb2852add95"
+   "hash": "8cf70fa425c1af7ec2a70e768ac357c0906a7df2aaa6930987a347744fc5cd8d"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
