--- a/meli-api.ipynb
+++ b/meli-api.ipynb
@@ -4602,7 +4602,8 @@
    "source": [
     "skip = ['prices','shipping','seller_contact','location','seller','melicoin','original_price','installments',\n",
     "            'sale_price', 'discounts','melicoin', 'offer_score','offer_share', 'match_score', 'winner_item_id','sellercar_dealer_logo',\n",
-    "            'sellerhome_image_url']\n",
+    "            'sellerhome_image_url','Combustible')\n",
+    "]\n",
     "\n",
     "for k,v in results[1]['address'].items():\n",
     "            {k: v for k,v in results[1]['address'].items() if k not in skip}[f'address{k}'] = v "
