--- a/modelo_RegresionLineal (api).ipynb
+++ b/modelo_RegresionLineal (api).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LUCIA~1.LOP\\AppData\\Local\\Temp/ipykernel_28492/187505526.py:7: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\LUCIA~1.LOP\\AppData\\Local\\Temp/ipykernel_19604/187505526.py:7: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  cat_df[str(variable)+'_'+str(label)] = np.where(cat_df[variable]==label,1,0)\n"
      ]
     }
@@ -115,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creamos grupos de Train & Test"
+    "MODELO DE REGRESION - Logaritmo de Precio (Base)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -129,25 +129,25 @@
      "text": [
       "Partición de entrenamiento\n",
       "-----------------------\n",
-      "count    4.547000e+03\n",
-      "mean     3.363625e+06\n",
-      "std      1.742930e+06\n",
-      "min      5.500000e+05\n",
-      "25%      2.130000e+06\n",
-      "50%      2.950000e+06\n",
-      "75%      4.200000e+06\n",
-      "max      3.070000e+07\n",
+      "count    3.957900e+04\n",
+      "mean     2.876519e+06\n",
+      "std      2.615258e+06\n",
+      "min      1.000000e+05\n",
+      "25%      1.550000e+06\n",
+      "50%      2.350000e+06\n",
+      "75%      3.590000e+06\n",
+      "max      1.300000e+08\n",
       "Name: price, dtype: float64\n",
       "Partición de test\n",
       "-----------------------\n",
-      "count    1.137000e+03\n",
-      "mean     3.289235e+06\n",
-      "std      1.658179e+06\n",
-      "min      4.336800e+05\n",
-      "25%      2.100000e+06\n",
-      "50%      2.899900e+06\n",
-      "75%      4.250000e+06\n",
-      "max      1.250000e+07\n",
+      "count    9.895000e+03\n",
+      "mean     2.933694e+06\n",
+      "std      3.277476e+06\n",
+      "min      1.000000e+05\n",
+      "25%      1.550000e+06\n",
+      "50%      2.360010e+06\n",
+      "75%      3.580000e+06\n",
+      "max      1.500000e+08\n",
       "Name: price, dtype: float64\n"
      ]
     }
@@ -157,7 +157,6 @@
     "\n",
     "#separte the predicting attribute into Y for model training \n",
     "y = datos_meli['price']\n",
-    "y_ln = np.log(datos_meli['price'])\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "                                        x,\n",
@@ -167,7 +166,7 @@
     "                                        shuffle      = True\n",
     "                                    )\n",
     "\n",
-    "#%%\n",
+    "\n",
     "print(\"Partición de entrenamiento\")\n",
     "print(\"-----------------------\")\n",
     "print(y_train.describe())\n",
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 417.3\n",
-      "Mean Squared Error: 405827913.16\n",
-      "Root Mean Squared Error: 637.05\n"
+      "Mean Absolute Error: 667.89\n",
+      "Mean Squared Error: 7512690477.07\n",
+      "Root Mean Squared Error: 2740.93\n"
      ]
     }
    ],
@@ -238,56 +237,40 @@
     "# Con Api\n",
     "# Mean Absolute Error: 0.42\n",
     "# Mean Squared Error: 405827.91\n",
-    "# Root Mean Squared Error: 0.64\n"
+    "# Root Mean Squared Error: 0.64\n",
+    "\n",
+    "# Con API New\n",
+    "# Mean Absolute Error: 668.52\n",
+    "# Mean Squared Error: 7513732110.61\n",
+    "# Root Mean Squared Error: 2741.12\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Entrenamos un Modelo con Logaritmo y vemos sus resultados"
+    "MODELO DE REGRESION - Logaritmo de Precio (Logaritmo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Partición de entrenamiento\n",
-      "-----------------------\n",
-      "count    4547.000000\n",
-      "mean       14.909771\n",
-      "std         0.487622\n",
-      "min        13.217674\n",
-      "25%        14.571633\n",
-      "50%        14.897316\n",
-      "75%        15.250595\n",
-      "max        17.239773\n",
-      "Name: price, dtype: float64\n",
-      "Partición de test\n",
-      "-----------------------\n",
-      "count    1137.000000\n",
-      "mean       14.886646\n",
-      "std         0.494426\n",
-      "min        12.980062\n",
-      "25%        14.557448\n",
-      "50%        14.880187\n",
-      "75%        15.262430\n",
-      "max        16.341239\n",
-      "Name: price, dtype: float64\n",
-      "Mean Absolute Error: 322.44\n",
-      "Mean Squared Error: 273942342.62\n",
-      "Root Mean Squared Error: 523.4\n"
+      "Mean Absolute Error: 494.89\n",
+      "Mean Squared Error: 7094296315.81\n",
+      "Root Mean Squared Error: 2663.51\n"
      ]
     }
    ],
    "source": [
     "# Separamos en Train & Test\n",
     "\n",
+    "y_ln = np.log(datos_meli['price'])\n",
     "X_train, X_test, y_train_ln, y_test_ln = train_test_split(\n",
     "                                        x,\n",
     "                                        y_ln,\n",
@@ -296,20 +279,11 @@
     "                                        shuffle      = True\n",
     "                                    )\n",
     "\n",
-    "#%%\n",
-    "print(\"Partición de entrenamiento\")\n",
-    "print(\"-----------------------\")\n",
-    "print(y_train_ln.describe())\n",
-    "\n",
-    "print(\"Partición de test\")\n",
-    "print(\"-----------------------\")\n",
-    "print(y_test_ln.describe())\n",
-    "\n",
     "# Entrenamos el modelo\n",
     "\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train_ln)\n",
-    "y_pred_ln = model.predict(X_test)\n",
+    "model_ln = LinearRegression()\n",
+    "model_ln.fit(X_train, y_train_ln)\n",
+    "y_pred_ln = model_ln.predict(X_test)\n",
     "\n",
     "#  Saco exponencial de los valores de Y\n",
     "y_test = np.exp(y_test_ln)\n",
@@ -324,7 +298,12 @@
     "\n",
     "# Mean Absolute Error: 331.45\n",
     "# Mean Squared Error: 274555797.78\n",
-    "# Root Mean Squared Error: 523.98"
+    "# Root Mean Squared Error: 523.98\n",
+    "\n",
+    "# Con api New\n",
+    "# Mean Absolute Error: 494.75\n",
+    "# Mean Squared Error: 7094414830.74\n",
+    "# Root Mean Squared Error: 2663.53"
    ]
   },
   {
@@ -336,16 +315,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####################################################\n",
+    "#### Prueba de datos de Kavak\n",
+    "#%%\n",
+    "# Separo en Y y X\n",
+    "datos_kavak = datos[(datos['type_kavak'] == 1)] \n",
+    "datos_kavak = datos_kavak.drop('type_kavak',axis=1)\n",
+    "datos_kavak = datos_kavak.drop('type_meli',axis=1)\n",
+    "\n",
+    "#separate the other attributes from the predicting attribute\n",
+    "x_kavak = datos_kavak.drop('price',axis=1)\n",
+    "\n",
+    "#separte the predicting attribute into Y for model training \n",
+    "y_kavak = datos_kavak['price']\n",
+    "\n",
+    "# Predigo las x_kavak\n",
+    "y_pred_kavak_ln = model_ln.predict(x_kavak)\n",
+    "\n",
+    "#  Saco exponencial de los valores de Y\n",
+    "y_pred_kavak = np.exp(y_pred_kavak_ln)\n",
+    "\n",
+    "#print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "#print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "#print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n",
+    "# Mean Absolute Error: 3030.07\n",
+    "# Mean Squared Error: 10459841498.76\n",
+    "# Root Mean Squared Error: 3234.17\n",
+    "\n",
+    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 3414.87\n",
-      "Mean Squared Error: 13674680874.97\n",
-      "Root Mean Squared Error: 3697.93\n"
+      "Mean Absolute Error: 688.24\n",
+      "Mean Squared Error: 755715179.67\n",
+      "Root Mean Squared Error: 869.32\n"
      ]
     }
    ],
@@ -362,26 +379,27 @@
     "x_kavak = datos_kavak.drop('price',axis=1)\n",
     "\n",
     "#separte the predicting attribute into Y for model training \n",
-    "y_kavak = np.log(datos_kavak['price'])\n",
+    "y_kavak = datos_kavak['price']\n",
     "\n",
     "# Predigo las x_kavak\n",
-    "y_pred_kavak_ln = model.predict(x_kavak)\n",
+    "y_pred_kavak = model.predict(x_kavak)\n",
     "\n",
-    "#  Saco exponencial de los valores de Y\n",
-    "y_pred_kavak = np.exp(y_pred_kavak_ln)\n",
+    "#print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "#print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "#print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n",
+    "# Mean Absolute Error: 3030.07\n",
+    "# Mean Squared Error: 10459841498.76\n",
+    "# Root Mean Squared Error: 3234.17\n",
     "\n",
     "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
     "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n",
-    "# Mean Absolute Error: 3030.07\n",
-    "# Mean Squared Error: 10459841498.76\n",
-    "# Root Mean Squared Error: 3234.17"
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e3e9a750fc05e5a08aac5c7f68a373d320e024e5143e44a9c92a2cb2852add95"
+   "hash": "8cf70fa425c1af7ec2a70e768ac357c0906a7df2aaa6930987a347744fc5cd8d"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
