--- a/modelo_RegresionLineal (scrapper).ipynb
+++ b/modelo_RegresionLineal (scrapper).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,25 +27,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Importamos One Hot Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Archivo utilizado para crear la función de One Hot Encoding\n",
+    "############################################################# \n",
+    "\n",
+    "# Función auxiliar: Toma un df de variables categoricas y selección el top_x de categorias\n",
+    "def one_hot_top_x(cat_df, variable,top_x_labels):\n",
+    "    for label in top_x_labels:\n",
+    "        cat_df[str(variable)+'_'+str(label)] = np.where(cat_df[variable]==label,1,0)\n",
+    "\n",
+    "# Función One Hot Encoder: Toma un DF y le hace una transformación de One Hot Encoder para con las categorias más repetidas \n",
+    "def one_hot_encoder(df,top_x):\n",
+    "    # Separo variables categoricas de númericas\n",
+    "    num_cols = df.select_dtypes(include=['float64', 'int']).columns.to_list()\n",
+    "    cat_cols = df.select_dtypes(include=['object', 'category']).columns.to_list()\n",
+    "    \n",
+    "    # Armo un DF solo con variables categoricas\n",
+    "    cat_df = df.drop(num_cols,axis=1)\n",
+    "    # Armo un DF solo con variables categoricas\n",
+    "    num_df = df.drop(cat_cols,axis=1)\n",
+    "   \n",
+    "    # Itero entre las variables categoricas y me quedo con el top 10 variables\n",
+    "    for variable in cat_cols:\n",
+    "        top_10 = [x for x in cat_df[variable].value_counts().sort_values(ascending=False).head(top_x).index]\n",
+    "        one_hot_top_x(cat_df,variable,top_10)\n",
+    "    \n",
+    "    cat_df = cat_df.drop(cat_cols,axis=1)\n",
+    "    df = pd.concat([cat_df,num_df], axis =1)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Importamos datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\LUCIA~1.LOP\\AppData\\Local\\Temp/ipykernel_16944/187505526.py:7: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  cat_df[str(variable)+'_'+str(label)] = np.where(cat_df[variable]==label,1,0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Levantamos los datos procesados\n",
     "datos_meli = pd.read_excel('data_ready_to_model.xlsx')\n",
-    "datos_kavak = pd.read_csv('base_kavak.csv', sep=\";\")\n",
-    "#%%\n",
+    "datos_meli['type'] = 'meli' \n",
+    "\n",
+    "\n",
+    "datos_kavak = pd.read_excel('base_kavak_scraper.xlsx')\n",
+    "datos_kavak['type'] = 'kavak' \n",
+    "\n",
     "# Uno los DF\n",
-    "#%%\n",
+    "\n",
     "frames = [datos_meli, datos_kavak]\n",
     "datos = pd.concat(frames)\n",
-    "#%%\n",
-    "datos = one_hot_encoder(datos,10)\n",
+    "\n",
+    "datos = one_hot_encoder(datos,100)\n",
     "datos_meli = datos[(datos['type_meli'] == 1)] \n",
     "datos_meli = datos_meli.drop('type_kavak',axis=1)\n",
     "datos_meli = datos_meli.drop('type_meli',axis=1)\n"
@@ -55,14 +111,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creamos grupos de Train & Test"
+    "MODELO REGRESION LINEAL - Base"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 991.1\n",
+      "Mean Squared Error: 9201689968.37\n",
+      "Root Mean Squared Error: 3033.43\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = datos_meli.drop('precio',axis=1)\n",
+    "\n",
+    "#separte the predicting attribute into Y for model training \n",
+    "y = datos_meli['precio']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "                                        x,\n",
+    "                                        y,\n",
+    "                                        train_size   = 0.8,\n",
+    "                                        random_state = 1234,\n",
+    "                                        shuffle      = True\n",
+    "                                    )\n",
+    "\n",
+    "\n",
+    "# Entrenamos el modelo\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# MIramos los resultados\n",
+    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000,2))\n",
+    "# MAE: Mean Absolute Error: 1.03 --> Con outliers\n",
+    "# MAE: Mean Absolute Error: 0.56 --> Sin ourliers\n",
+    "# Mean Absolute Error: 0.48 --> Aplicando LN a Precio (error)\n",
+    "# Mean Absolute Error: 0.86\n",
+    "\n",
+    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000,2))\n",
+    "# MSE: Mean Squared Error: 3,732,143.07\n",
+    "# MSE: Mean Squared Error: 6,599,540.41 --> Con LN   \n",
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n",
+    "# Root Mean Squared Error: 1.93\n",
+    "# Root Mean Squared Error: 0.74\n",
+    "# Root Mean Squared Error: 2.57 --> Con LN\n",
+    "\n",
+    "# Mean Absolute Error: 986.07\n",
+    "# Mean Squared Error: 9214867036.52\n",
+    "# Root Mean Squared Error: 3035.6\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MODELO DE REGRESION LINEAL - Logaritmo de Precio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Partición de entrenamiento\n",
+      "-----------------------\n",
+      "count    19712.000000\n",
+      "mean        14.776689\n",
+      "std          0.506936\n",
+      "min         12.180755\n",
+      "25%         14.452087\n",
+      "50%         14.731801\n",
+      "75%         15.065412\n",
+      "max         18.064006\n",
+      "Name: precio, dtype: float64\n",
+      "Partición de test\n",
+      "-----------------------\n",
+      "count    4929.000000\n",
+      "mean       14.790185\n",
+      "std         0.519188\n",
+      "min        12.180755\n",
+      "25%        14.457364\n",
+      "50%        14.751604\n",
+      "75%        15.068274\n",
+      "max        18.526041\n",
+      "Name: precio, dtype: float64\n",
+      "Mean Absolute Error: 881.68\n",
+      "Mean Squared Error: 9166898967.02\n",
+      "Root Mean Squared Error: 3027.69\n"
+     ]
+    }
+   ],
    "source": [
     "x = datos_meli.drop('precio',axis=1)\n",
     "\n",
@@ -79,67 +229,42 @@
     "                                        shuffle      = True\n",
     "                                    )\n",
     "\n",
-    "#%%\n",
+    "\n",
     "print(\"Partición de entrenamiento\")\n",
     "print(\"-----------------------\")\n",
     "print(y_train_ln.describe())\n",
     "\n",
     "print(\"Partición de test\")\n",
     "print(\"-----------------------\")\n",
-    "print(y_test_ln.describe())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Entrenamos el modelo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train_ln)\n",
-    "y_pred_ln = model.predict(X_test)\n",
+    "print(y_test_ln.describe())\n",
+    "\n",
+    "# Entrenamos el modelo\n",
+    "model_ln = LinearRegression()\n",
+    "model_ln.fit(X_train, y_train_ln)\n",
+    "y_pred_ln = model_ln.predict(X_test)\n",
     "\n",
     "#  Saco exponencial de los valores de Y\n",
     "y_test = np.exp(y_test_ln)\n",
-    "y_pred = np.exp(y_pred_ln)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Miramos resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000000,2))\n",
+    "y_pred = np.exp(y_pred_ln)\n",
     "\n",
+    "# MIramos los resultados\n",
+    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_test, y_pred)/1000,2))\n",
     "# MAE: Mean Absolute Error: 1.03 --> Con outliers\n",
     "# MAE: Mean Absolute Error: 0.56 --> Sin ourliers\n",
     "# Mean Absolute Error: 0.48 --> Aplicando LN a Precio (error)\n",
     "# Mean Absolute Error: 0.86\n",
-    "#%%\n",
     "\n",
-    "#%%\n",
-    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000000,2))\n",
+    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_test, y_pred)/1000,2))\n",
     "# MSE: Mean Squared Error: 3,732,143.07\n",
     "# MSE: Mean Squared Error: 6,599,540.41 --> Con LN   \n",
-    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000000,2))\n",
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_test, y_pred))/1000,2))\n",
     "# Root Mean Squared Error: 1.93\n",
     "# Root Mean Squared Error: 0.74\n",
-    "# Root Mean Squared Error: 2.57 --> Con LN"
+    "# Root Mean Squared Error: 2.57 --> Con LN\n",
+    "\n",
+    "# Mean Absolute Error: 882.04\n",
+    "# Mean Squared Error: 9169557311.54\n",
+    "# Root Mean Squared Error: 3028.13"
    ]
   },
   {
@@ -151,9 +276,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 970.81\n",
+      "Mean Squared Error: 1423226783.82\n",
+      "Root Mean Squared Error: 1192.99\n"
+     ]
+    }
+   ],
    "source": [
     "####################################################\n",
     "#### Prueba de datos de Kavak\n",
@@ -169,24 +304,66 @@
     "#separte the predicting attribute into Y for model training \n",
     "y_kavak = datos_kavak['precio']\n",
     "\n",
-    "#%%\n",
     "# Predigo las x_kavak\n",
-    "y_pred_kavak_ln = model.predict(x_kavak)\n",
-    "#%%\n",
+    "y_pred_kavak = model.predict(x_kavak)\n",
     "\n",
-    "#%%\n",
+    "# Resultados de base\n",
+    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 817.05\n",
+      "Mean Squared Error: 1153609423.99\n",
+      "Root Mean Squared Error: 1074.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predigo las x_kavak\n",
+    "y_pred_kavak_ln = model_ln.predict(x_kavak)\n",
+    "\n",
     "#  Saco exponencial de los valores de Y\n",
-    "y_pred_kavak = np.exp(y_pred_kavak_ln)/1000\n",
-    "#%%\n",
-    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000000,2))\n",
-    "# Mean Absolute Error: 126.93\n",
-    "#%%"
+    "y_pred_kavak = np.exp(y_pred_kavak_ln)\n",
+    "\n",
+    "print('Mean Absolute Error:', round(metrics.mean_absolute_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "print('Mean Squared Error:', round(metrics.mean_squared_error(y_kavak, y_pred_kavak)/1000,2))\n",
+    "print('Root Mean Squared Error:', round(np.sqrt(metrics.mean_squared_error(y_kavak, y_pred_kavak))/1000,2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_kavak = pd.DataFrame(y_kavak)\n",
+    "df_kavak\n",
+    "\n",
+    "df_pred = pd.DataFrame(y_pred_kavak, columns = ['y_pred'])\n",
+    "df_pred\n",
+    "\n",
+    "frames = [df_kavak, df_pred, x_kavak]\n",
+    "data_regresion = pd.concat(frames, axis = 1)\n",
+    "\n",
+    "data_regresion\n",
+    "\n",
+    "data_regresion.to_excel('data_analisis_regresion.xlsx', index=False)"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e3e9a750fc05e5a08aac5c7f68a373d320e024e5143e44a9c92a2cb2852add95"
+   "hash": "8cf70fa425c1af7ec2a70e768ac357c0906a7df2aaa6930987a347744fc5cd8d"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
